--- a/NotoSerifDevanagari.html
+++ b/NotoSerifDevanagari.html
@@ -5,14 +5,18 @@
 <style type="text/css" media="screen, print">
 @font-face {
       font-family: 'Noto Serif Devanagari';
-      src: url(https://github.com/TidharC/noto-i18nqa/blob/master/NotoSerifDevanagari-Regular.ttf) format('truetype'),;
+      src: url(https://github.com/TidharC/noto-i18nqa/blob/master/NotoSerifDevanagari-Regular.ttf) format('truetype');
+	
 	  }
 	  
-	  @font-face {
-	        font-family: 'Noto Sans Devanagari';
-	        src: url(https://github.com/TidharC/noto-i18nqa/blob/master/NotoSansDevanagari-Regular.ttf) format('truetype'),;
-	  	  }
-	  table, th, td {
+ @font-face {
+	 font-family: 'Noto Sans Devanagari';
+	 src: url(https://github.com/TidharC/noto-i18nqa/blob/master/NotoSansDevanagari-Regular.ttf) format('truetype');
+	}
+	  
+	
+	
+	table, th, td {
 		  border: 1px solid black;
 		  }
 		  </style>
