--- a/NotoSerifDevanagari.html
+++ b/NotoSerifDevanagari.html
@@ -26,7 +26,7 @@ table, th, td {
 				<th>Noto Sans Devanagari</th>
 			</tr>
 			<tr>
-				<th style= font-family:"NotoSerifDevanagari">प्रस्तावना
+				<th style= font-family:"NotoSansDevanagari">प्रस्तावना
 
 चूंकि मानव परिवार के सभी सदस्यों के जन्मजात गौरव और समान तथा अविच्छिन्न अधिकार की स्वीकृति ही विश्व-शान्ति, न्याय और स्वतन्त्रता की बुनियाद है,
 
@@ -50,7 +50,7 @@ table, th, td {
 
 
 				</th>
-				<th style= font-family:"NotoSerifDevanagari">प्रस्तावना
+				<th style= font-family:"NotoSansDevanagari">प्रस्तावना
 
 चूंकि मानव परिवार के सभी सदस्यों के जन्मजात गौरव और समान तथा अविच्छिन्न अधिकार की स्वीकृति ही विश्व-शान्ति, न्याय और स्वतन्त्रता की बुनियाद है,
 
