--- a/Devanagari.html
+++ b/Devanagari.html
@@ -24,8 +24,11 @@ table, th, td {
 	
 	@font-face {
 		font-family:'NotoSerifDevanagariBold';
+		src: url(NotoSerifDevanagari-Bold.ttf) format('truetype');
+<!--
 		src: url(https://github.com/TidharC/noto-i18nqa/blob/master/NotoSerifDevanagari-Bold.ttf) format('truetype');
 		font-weight: bold;
+-->
 	}
 	  
 	 @font-face {
