--- a/Devanagari.html
+++ b/Devanagari.html
@@ -33,8 +33,11 @@ table, th, td {
 	  
 	 @font-face {
 		 font-family:'NotoSansDevanagariBold';
+		 src: url(NotoSansDevanagari-Bold.ttf) format('truetype');
+<!--
 		 src: url(https://github.com/TidharC/noto-i18nqa/blob/master/NotoSansDevanagari-Bold.ttf) format('truetype');
 		 font-weight: bold;
+-->
 	}
 	
 	
