--- a/Devanagari.html
+++ b/Devanagari.html
@@ -14,30 +14,22 @@ table, th, td {
 
 	@font-face {
 		font-family:'NotoSerifDevanagari';
-		src: url(https://github.com/TidharC/noto-i18nqa/blob/master/NotoSerifDevanagari-Regular.ttf) format('truetype');
+		src: url(NotoSerifDevanagari-Regular.ttf) format('truetype');
 	}
 	
 	@font-face {
 		font-family:'NotoSansDevanagari';
-		src: url(https://github.com/TidharC/noto-i18nqa/blob/master/NotoSansDevanagari-Regular.ttf) format('truetype');
+		src: url(NotoSansDevanagari-Regular.ttf) format('truetype');
 	}
 	
 	@font-face {
 		font-family:'NotoSerifDevanagariBold';
 		src: url(NotoSerifDevanagari-Bold.ttf) format('truetype');
-<!--
-		src: url(https://github.com/TidharC/noto-i18nqa/blob/master/NotoSerifDevanagari-Bold.ttf) format('truetype');
-		font-weight: bold;
--->
 	}
 	  
 	 @font-face {
 		 font-family:'NotoSansDevanagariBold';
 		 src: url(NotoSansDevanagari-Bold.ttf) format('truetype');
-<!--
-		 src: url(https://github.com/TidharC/noto-i18nqa/blob/master/NotoSansDevanagari-Bold.ttf) format('truetype');
-		 font-weight: bold;
--->
 	}
 	
 	
