--- a/ArmenianFontTest.html
+++ b/ArmenianFontTest.html
@@ -24,10 +24,11 @@
     .p2 {line-height: 20.0px; font-size: 14.0px; color: #000000}
     .p5 {line-height: 30.0px; font-size: 20.0px; color: #000000}
     .p6 {line-height: 20.0px; font-size: 14.0px; color: #000000}
+
   </style>
 </head>
 <body>
-<div class="p1"><span style="font-family:NotoSerifArmenian-Bold">Արտակարգ դեպք Կապանի ԲԿ-ում. անասթեզիոլոգը փորձել է բռնաբարե՞լ հիվանդ աղջկան</span></div>
+<span style="font-family:NotoSerifArmenian-Bold"; line-height: 30.0px; font-size: 20.0px;>Արտակարգ դեպք Կապանի ԲԿ-ում. անասթեզիոլոգը փորձել է բռնաբարե՞լ հիվանդ աղջկան</span>
 <div class="p2"><span style="font-family:NotoSerifArmenian-Regular">Կապանի բժշկական կենտրոնում հունվարի 17-ի գիշերը արտառոց դեպք է գրանցվել. երիտասարդ աղջիկն ահազանգել է, որ  հիվանդանոց տեղափոխվելուց հետո բժշկի կողմից սեռական ոտնձգության է ենթարկվել. անասթեզիոլոգը փորձել է բռնաբարել իրեն: NEWS.am-ին Կապանի բժշկական կենտրոնից դեպքի վերաբերյալ տեղեկացրին, որ լսել են նման բան, սակայն, չեն կարող հաստատել: Կապանի բժշկական կենտրոնի բժշկուհի Ալլա Ալեքսանդրովնան էլ մեզ հետ զրույցում նշեց, որ այս պահին կատարվում է հետաքննություն եւ դեպքի վերաբերյալ մանրամասներ չեն կարող հայտնել: Բժշկուհին նաեւ խուսափեց ասել անասթեզիոլոգի անունը:</span></div>
 <div class="p5"><br><span style="font-family:NotoSansArmenian-Bold">Արտակարգ դեպք Կապանի ԲԿ-ում. անասթեզիոլոգը փորձել է բռնաբարե՞լ հիվանդ աղջկան</span></div>
 <div class="p6"><span style="font-family:NotoSansArmenian-Regular">Կապանի բժշկական կենտրոնում հունվարի 17-ի գիշերը արտառոց դեպք է գրանցվել. երիտասարդ աղջիկն ահազանգել է, որ  հիվանդանոց տեղափոխվելուց հետո բժշկի կողմից սեռական ոտնձգության է ենթարկվել. անասթեզիոլոգը փորձել է բռնաբարել իրեն: NEWS.am-ին Կապանի բժշկական կենտրոնից դեպքի վերաբերյալ տեղեկացրին, որ լսել են նման բան, սակայն, չեն կարող հաստատել: Կապանի բժշկական կենտրոնի բժշկուհի Ալլա Ալեքսանդրովնան էլ մեզ հետ զրույցում նշեց, որ այս պահին կատարվում է հետաքննություն եւ դեպքի վերաբերյալ մանրամասներ չեն կարող հայտնել: Բժշկուհին նաեւ խուսափեց ասել անասթեզիոլոգի անունը:</span></div>
