--- a/Devanagari.html
+++ b/Devanagari.html
@@ -33,7 +33,7 @@ table, th, td {
 </style>
 	</head>
 	<body>
-		<table style="width:400px">
+		<table width="100%">
 			<tr>
 				<td>Noto Serif Devanagari</td>
 				<td>Noto Sans Devanagari</td>
