--- a/Devanagari.html
+++ b/Devanagari.html
@@ -2,6 +2,8 @@
 <html lang="hi">
 <title>Comparing Noto Serif Devanagari with Noto Sans Devanagari- Nizar Qandah</title>
 <head>
+	<style type="text/css" media="screen, print">
+	
 	@font-face {
 		font-family:'NotoSerifDevanagari';
 		src: url(NotoSerifDevanagari-Regular.ttf) format('truetype');
