--- a/ArmenianFontTest.html
+++ b/ArmenianFontTest.html
@@ -46,7 +46,7 @@
 			<td><b>Noto Serif Armenian Bold</b></td>
 		</tr>
 		<tr>
-			<td style= font-family:"NotoSansArmeniaB">प्
+			<td style= font-family:"NotoSansArmenianB">प्
           			Կապանի բժշկական կենտրոնում հունվարի 17-ի գիշերը արտառոց դեպք է գրանցվել. երիտասարդ աղջիկն ահազանգել է, որ հիվանդանոց տեղափոխվելուց հետո բժշկի կողմից սեռական ոտնձգության է ենթարկվել. անասթեզիոլոգը փորձել է բռնաբարել իրեն: NEWS.am-ին Կապանի բժշկական կենտրոնից դեպքի վերաբերյալ տեղեկացրին, որ լսել են նման բան, սակայն, չեն կարող հաստատել: Կապանի բժշկական կենտրոնի բժշկուհի Ալլա Ալեքսանդրովնան էլ մեզ հետ զրույցում նշեց, որ այս պահին կատարվում է հետաքննություն եւ դեպքի վերաբերյալ մանրամասներ չեն կարող հայտնել: Բժշկուհին նաեւ խուսափեց ասել անասթեզիոլոգի անունը:
 			</td>
 			<td style= font-family:"NotoSerifArmenianB">
