--- a/HebrewWebFont.html
+++ b/HebrewWebFont.html
@@ -40,7 +40,7 @@ table, th, td {
 			<tr>
 			
 				<td style= font-family:"NotoSansHebrew">
-					<div dir="rtl">	
+					<div dir=rtl>	
 					אִם הַמִּלָּה לֹא נֻקְּדָה! כְּתֹב אוֹתָהּ בְּתֵבַת טֶקְסְט   וּלְחַץ עַל לַחְצָן "הוסף מילה"! וְתּוֹךְ 24 שָׁעוֹת   הַמִּלָּה תִּתְוַסֵּף לְמַאֲגַר הַמִּלִּים                           
 					</div>
 				</td>
